Cleanup: FileSystem API's Entry.toURL() impl should return KURL instead of String https://bugs.webkit.org/show_bug.cgi?id=85736

Change the return type of Entry::toURL() from String to KURL.

Reviewed by David Levin.

No new tests as this change should not have any visible impact in the javascript layer.

Source/WebCore:

* Modules/filesystem/EntryBase.cpp:
(WebCore::EntryBase::toURL):
* Modules/filesystem/EntryBase.h:
* platform/AsyncFileSystem.h:
* platform/blackberry/AsyncFileSystemBlackberry.cpp:
(AsyncFileSystemBlackberry::toURL):
* platform/blackberry/AsyncFileSystemBlackberry.h:
* platform/gtk/AsyncFileSystemGtk.cpp:
(AsyncFileSystemGtk::toURL):
* platform/gtk/AsyncFileSystemGtk.h:

Souce/We/chromium:

* src/AsyncFileSystemChromium.cpp:
(WebCore::AsyncFileSystemChromium::toURL):
String to KURL.
* src/AsyncFileSystemChromium.h:
(AsyncFileSystemChromium):

Canonical link: https://commits.webkit.org/103336@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@116273 268f45cc-cd09-0410-ab3c-d52691b4dbfc