Source/WebCore/platform/blackberry/AsyncFileSystemBlackBerry.h
@@ -29,7 +29,7 @@ class AsyncFileSystemBlackBerry : public AsyncFileSystem {
 public:
     AsyncFileSystemBlackBerry(AsyncFileSystem::Type);
     virtual ~AsyncFileSystemBlackBerry();
-    virtual String toURL(const String& originString, const String& fullPath);
+    virtual KURL toURL(const String& originString, const String& fullPath) const;
     virtual void move(const String& sourcePath, const String& destinationPath, PassOwnPtr<AsyncFileSystemCallbacks>);
     virtual void copy(const String& sourcePath, const String& destinationPath, PassOwnPtr<AsyncFileSystemCallbacks>);
     virtual void remove(const String& path, PassOwnPtr<AsyncFileSystemCallbacks>);
