Source/WebCore/platform/gtk/AsyncFileSystemGtk.h
@@ -34,7 +34,7 @@ public:
     AsyncFileSystemGtk(AsyncFileSystem::Type);
     virtual ~AsyncFileSystemGtk();
 
-    virtual String toURL(const String& originString, const String& fullPath);
+    virtual KURL toURL(const String& originString, const String& fullPath) const;
     virtual void move(const String& sourcePath, const String& destinationPath, PassOwnPtr<AsyncFileSystemCallbacks>);
     virtual void copy(const String& sourcePath, const String& destinationPath, PassOwnPtr<AsyncFileSystemCallbacks>);
     virtual void remove(const String& path, PassOwnPtr<AsyncFileSystemCallbacks>);
